# lightcone

./: .env.example  .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  package.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml  sync-python-sdk.yml  sync-typescript-sdk.yml
examples/: __init__.py  _cua.py  competitor_research.py  coordinate_scaling.py  desktop.py  interactive.py  monitor.py  multi_tab.py  persistent_session.py  qa.py  run_agent.py  shell.py  simple.py  streaming.py  visualize.py
examples/harness/: README.md  __init__.py  evaluate.py  interactive.py  runner.py  simple.py
native/: Cargo.toml  build.rs
native/src/: image_ops.rs  lib.rs
scripts/: lint
scripts/utils/: upload-artifact.sh
sdks/python/: CHANGELOG.md  LICENSE  README.md  api.md  pyproject.toml
sdks/python/tests/: test_client.py  test_deepcopy.py  test_extract_files.py  (+4 more)
sdks/typescript/: CHANGELOG.md  README.md  api.md  eslint.config.mjs  jest.config.ts  package.json  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
src/lightcone/: __init__.py  _base_client.py  _client.py  _exceptions.py  _response.py  _types.py  _version.py  actions.py  agent.py  cli.py  clients.py  config.py  images.py  models.py  parsing.py  prompts.py  server.py
src/tzafon/: __init__.py  _client.py  _response.py  _streaming.py  _version.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_computers.py  test_responses.py
tests/decoders/: test_jsonl.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_proxy.py  test_typing.py
(+226 files in other folders)
