[project]
name = "lightcone"
version = "0.1.0"
description = "Northstar CUA Fast — examples and SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "tzafon>=2.8.0",
]

[tool.uv.sources]
tzafon = { workspace = true }

[tool.uv.workspace]
members = ["sdks/python"]

[project.optional-dependencies]
streaming = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "ruff>=0.6.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
