[package]
name = "lightcone_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "lightcone_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
